--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -12,7 +12,8 @@ interface Props {
 const { post } = Astro.props;
 
 const contentsDom = new JSDOM(post.contents);
-const codes = contentsDom.window.document.querySelectorAll("pre > code");
+const document = contentsDom.window.document;
+const codes = document.querySelectorAll("pre > code");
 for (const code of codes) {
 	let lang = "";
 	for (const className of code.classList.value.split(" ")) {
@@ -35,7 +36,13 @@ for (const code of codes) {
 	}
 }
 
-const body = contentsDom.window.document.querySelector("body");
+const images = document.querySelectorAll("img");
+for (const image of images) {
+	image.src = `${image.src}?fm=webp`;
+	image.loading = "lazy";
+}
+
+const body = document.querySelector("body");
 const contents = body !== null ? body.innerHTML : "";
 ---
 
