--- a/src/components/molecules/Header.astro
+++ b/src/components/molecules/Header.astro
@@ -32,7 +32,7 @@
 		#title-wrap {
 			display: flex;
 			justify-content: center;
-			padding: 60px 0 62px 0;
+			padding: 60px 0;
 
 			#title-link {
 				text-decoration: none;
