--- a/src/pages/categories/[id]/index.astro
+++ b/src/pages/categories/[id]/index.astro
@@ -2,7 +2,7 @@
 import { getListAllContents } from "@/lib/microcms";
 import type { Blog, Category } from "@/lib/microcms";
 import type { MicroCMSContentId, MicroCMSDate } from "microcms-js-sdk";
-import PostList from "@/components/PostList.astro";
+import PostList from "@/components/molecules/PostList.astro";
 
 interface pathType {
 	params: {
