--- a/src/components/molecules/PostList.astro
+++ b/src/components/molecules/PostList.astro
@@ -61,7 +61,7 @@ const { posts, title } = Astro.props;
 									<img
 										data-tag-id={tag.id}
 										class="post-tag-icon"
-										src={tag.image !== undefined ? `${tag.image.url}?fm=webp&w=${size}` : ""}
+										src={tag.image !== undefined ? `${tag.image.url}?fm=webp&w=${50}` : ""}
 										width={size}
 										height={size}
 										alt={tag.name}
