フォント遅延読み込み

--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -204,7 +204,6 @@ const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefin
 
 			& :global(pre > code),
 			& :global(pre > code *) {
-				font-family: "Source Code Pro", "Noto Sans JP", monospace;
 				tab-size: 4;
 				-moz-tab-size: 4;
 				font-size: 13px;
@@ -253,7 +252,6 @@ const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefin
 			}
 
 			& > :global(p > code) {
-				font-family: "Source Code Pro", monospace;
 				background-color: #242424;
 				color: white;
 				padding: 2px 10px;
@@ -296,3 +294,36 @@ const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefin
 		}
 	}
 </style>
+
+<script>
+	const observer = new IntersectionObserver((entries) => {
+		for (const entry of entries) {
+			if (entry.isIntersecting) {
+				document.head.insertAdjacentHTML(
+					"beforeend",
+					/* css */ `
+					<style>
+						pre > code,
+						pre > code * {
+							font-family: "Source Code Pro", monospace;
+						}
+					</style>
+				`
+				);
+				observer.disconnect();
+			}
+		}
+	});
+
+	document.addEventListener("astro:after-swap", () => {
+		const code = document.querySelector("pre > code");
+		if (code !== null) {
+			observer.observe(code);
+		}
+	});
+
+	const code = document.querySelector("pre > code");
+	if (code !== null) {
+		observer.observe(code);
+	}
+</script>
