--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -45,6 +45,11 @@ for (const image of images) {
 	image.setAttribute("loading", "lazy");
 }
 
+const iframelyScripts = document.querySelectorAll('script[src="//cdn.iframe.ly/embed.js"]');
+for (const iframelyScript of iframelyScripts) {
+	iframelyScript.remove();
+}
+
 const body = document.querySelector("body");
 const contents = body !== null ? body.innerHTML : "";
 const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefined;
@@ -301,17 +306,17 @@ const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefin
 			if (entry.isIntersecting) {
 				document.head.insertAdjacentHTML(
 					"beforeend",
-					/* css */ `
-					<link rel="preconnect" href="https://fonts.googleapis.com">
-					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-					<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-					<style>
-						pre > code,
-						pre > code * {
-							font-family: "Source Code Pro", monospace;
-						}
-					</style>
-				`
+					/* html */ `
+						<link rel="preconnect" href="https://fonts.googleapis.com">
+						<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+						<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+						<style>
+							pre > code,
+							pre > code * {
+								font-family: "Source Code Pro", monospace;
+							}
+						</style>
+					`
 				);
 				observer.disconnect();
 			}
@@ -328,5 +333,31 @@ const thumbnailSrc = post.thumbnail !== undefined ? post.thumbnail.url : undefin
 	const code = document.querySelector("pre > code");
 	if (code !== null) {
 		observer.observe(code);
+	}
+</script>
+
+<script>
+	const observer = new IntersectionObserver((entries) => {
+		for (const entry of entries) {
+			if (entry.isIntersecting) {
+				const script = document.createElement("script");
+				script.src = "//cdn.iframe.ly/embed.js";
+				document.body.appendChild(script);
+
+				observer.disconnect();
+			}
+		}
+	});
+
+	document.addEventListener("astro:after-swap", () => {
+		const iframely = document.querySelector(".iframely-embed");
+		if (iframely !== null) {
+			observer.observe(iframely);
+		}
+	});
+
+	const iframely = document.querySelector(".iframely-embed");
+	if (iframely !== null) {
+		observer.observe(iframely);
 	}
 </script>
