--- a/src/components/molecules/Header.astro
+++ b/src/components/molecules/Header.astro
@@ -1,7 +1,7 @@
 <header>
 	<div id="title-wrap">
 		<a id="title-link" href="/">
-			<h1 id="title">孅いエンジニアブログ</h1>
+			<h1 id="title">孅いウェブエンジニアブログ</h1>
 		</a>
 	</div>
 	<nav>
