ヘッダーに「どっとや」リンクを追加

--- a/src/components/molecules/Header.astro
+++ b/src/components/molecules/Header.astro
@@ -11,11 +11,17 @@
 			<br class="br-allergy-navi" />
 			アプデ情報
 		</a>
+		<a href="/categories/pixel-gives">
+			どっとや{" "}
+			<br class="br-pixel-gives" />
+			アプデ情報
+		</a>
 	</nav>
 </header>
 
 <style lang="scss">
-	.br-allergy-navi {
+	.br-allergy-navi,
+	.br-pixel-gives {
 		@media (min-width: 601px) {
 			display: none;
 		}
