--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -2,8 +2,7 @@
 import type { Blog } from "@/lib/microcms";
 import type { MicroCMSListContent } from "microcms-js-sdk";
 import { formatDate } from "@/lib/format-date";
-import { codeToHtml } from "shiki";
-import * as cheerio from "cheerio";
+import { formatContents } from "@/lib/format-contents";
 
 interface Props {
 	post: Blog & MicroCMSListContent;
@@ -11,52 +10,10 @@ interface Props {
 
 const { post } = Astro.props;
 
-const $ = cheerio.load(post.contents);
-const codes = $("pre > code");
-for (const code of codes) {
-	let lang = "";
-	for (const className of ($(code).attr("class") ?? "").split(" ")) {
-		const match = className.match(/^language-(.+)$/);
-		if (match !== null) {
-			lang = match[1] ?? "";
-			break;
-		}
-	}
-
-	if (lang !== "" && $(code).text() !== null) {
-		const hilightedCode = await codeToHtml($(code).text(), {
-			lang: lang,
-			theme: "github-dark-dimmed"
-		});
-		$(code).parent().replaceWith(hilightedCode);
-	}
-}
-
-const images = $("img");
-for (const image of images) {
-	const src = $(image).attr("src");
-	$(image).attr("src", `${src}?fm=webp&w=880`);
-	$(image).attr(
-		"srcset",
-		`${src}?fm=webp&w=300px 300w,${src}?fm=webp&w=500px 500w,${src}?fm=webp&w=650px 650w,${src}?fm=webp&w=880px 880w`
-	);
-	$(image).attr("sizes", "(max-width: 350px) 300px,(max-width: 550px) 500px,(max-width: 700px) 650px,875px");
-	$(image).attr("loading", "lazy");
-}
-
-const iframelyScripts = $('script[src="//cdn.iframe.ly/embed.js"]');
-for (const iframelyScript of iframelyScripts) {
-	$(iframelyScript).remove();
-}
-
-const iframelyLinks = $(".iframely-embed a");
-for (const iframelyLink of iframelyLinks) {
-	$(iframelyLink).attr("aria-hidden", "true");
-	$(iframelyLink).attr("tabindex", "-1");
-}
-
-const body = $("body");
-const contents = body !== null ? body.prop("innerHTML") : "";
+const categoryContents = await formatContents(
+	post.category !== undefined && post.category.contents !== undefined ? post.category.contents : ""
+);
+const contents = categoryContents + (await formatContents(post.contents));
 ---
 
 <div class="post-info">
