--- a/src/components/molecules/PostList.astro
+++ b/src/components/molecules/PostList.astro
@@ -367,19 +367,20 @@ const { posts, title } = Astro.props;
 	};
 
 	const flowTagIcons = () => {
+		if (document.body.dataset.executedFlowTag === "true") {
+			return;
+		}
+
+		document.body.dataset.executedFlowTag = "true";
 		const postLinks = document.querySelectorAll<HTMLAnchorElement>(".post-link");
 		postLinks.forEach((postLink) => {
-			postLink.addEventListener(
-				"mouseover",
-				() => {
-					if (document.body.dataset.touch === "true") {
-						return;
-					}
+			postLink.addEventListener("mouseover", () => {
+				if (document.body.dataset.touch === "true") {
+					return;
+				}
 
-					createBubbleTag(postLink);
-				},
-				false
-			);
+				createBubbleTag(postLink);
+			});
 
 			postLink.addEventListener(
 				"touchstart",
