ヘッダーからナビゲーションを削除し、Postコンポーネントのスタイルを改善。リンクのホバー効果を追加し、見出しのフォントサイズを変更。全体の色を調整。

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -146,6 +146,8 @@ const path = Astro.url.pathname.replace(/^\//, "").replace(/\.html$/, "");
 		</script>
 		<style lang="scss">
 			:global(*) {
+				color: #232323;
+
 				@media (prefers-color-scheme: dark) {
 					color: white;
 				}
