--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -143,6 +143,11 @@ const contents = categoryContents + (await formatContents(post.contents));
 
 			& :global(a) {
 				color: #07a715;
+				font-weight: bold;
+
+				&:hover {
+					text-decoration: underline;
+				}
 
 				@media (prefers-color-scheme: dark) {
 					color: #9deb83;
@@ -163,14 +168,11 @@ const contents = categoryContents + (await formatContents(post.contents));
 			}
 
 			& :global(h3) {
-				border-bottom: 1px solid black;
 				margin-top: 40px;
-				font-size: 20px;
+				font-size: 25px;
 				padding: 10px 0;
-
-				@media (prefers-color-scheme: dark) {
-					border-bottom: 1px solid white;
-				}
+				font-weight: bold;
+				line-height: 1.4;
 			}
 
 			& :global(pre > code),
@@ -261,6 +263,12 @@ const contents = categoryContents + (await formatContents(post.contents));
 				width: 100%;
 				height: 100%;
 				border: 0;
+			}
+
+			& :global(figure > figcaption) {
+				text-align: center;
+				font-size: 15px;
+				margin-top: 10px;
 			}
 		}
 	}
