--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -145,6 +145,18 @@ const contents = categoryContents + (await formatContents(post.contents));
 				color: #07a715;
 				font-weight: bold;
 
+				&:after {
+					mask-image: url("/open-new-tab.png");
+					mask-size: contain;
+					mask-repeat: no-repeat;
+					aspect-ratio: 1 / 1;
+					content: "";
+					width: 1em;
+					display: inline-block;
+					background-color: currentColor;
+					transform: translateX(0.5px) translateY(2.5px);
+				}
+
 				&:hover {
 					text-decoration: underline;
 				}
@@ -161,10 +173,24 @@ const contents = categoryContents + (await formatContents(post.contents));
 				display: block;
 			}
 
-			& :global(h4) {
+			& :global(h5) {
 				margin-top: 40px;
 				font-size: 17px;
-				text-decoration: underline;
+				font-weight: bold;
+
+				&:before {
+					content: "### ";
+				}
+			}
+
+			& :global(h4) {
+				margin-top: 40px;
+				font-size: 20px;
+				font-weight: bold;
+
+				&:before {
+					content: "## ";
+				}
 			}
 
 			& :global(h3) {
@@ -173,6 +199,11 @@ const contents = categoryContents + (await formatContents(post.contents));
 				padding: 10px 0;
 				font-weight: bold;
 				line-height: 1.4;
+
+				&:before {
+					content: "# ";
+					color: #9b9b9b;
+				}
 			}
 
 			& :global(pre > code),
