--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -171,6 +171,19 @@ const contents = categoryContents + (await formatContents(post.contents));
 				height: auto;
 				margin: 0 auto;
 				display: block;
+				cursor: zoom-in;
+
+				&:global(.zoom) {
+					position: fixed;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background-color: rgba(0, 0, 0, 0.8);
+					object-fit: contain;
+					z-index: 9999;
+					cursor: zoom-out;
+				}
 			}
 
 			& :global(h5) {
@@ -377,4 +390,34 @@ const contents = categoryContents + (await formatContents(post.contents));
 	if (iframely !== null) {
 		observer.observe(iframely);
 	}
+</script>
+
+<script>
+	function noScroll(e: WheelEvent | TouchEvent) {
+		e.preventDefault();
+	}
+
+	function checkImage() {
+		const imgs = document.querySelectorAll(".rich-contents img");
+		for (const imgElement of imgs) {
+			imgElement.addEventListener("click", () => {
+				if (imgElement.classList.contains("zoom")) {
+					imgElement.classList.remove("zoom");
+					document.removeEventListener("touchmove", noScroll);
+					document.removeEventListener("wheel", noScroll);
+				} else {
+					imgElement.classList.add("zoom");
+					document.addEventListener("touchmove", noScroll, { passive: false });
+					document.addEventListener("wheel", noScroll, { passive: false });
+					console.log("aaa");
+				}
+			});
+		}
+	}
+
+	document.addEventListener("astro:after-swap", () => {
+		checkImage();
+	});
+
+	checkImage();
 </script>
