--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import Base from "@/layouts/Base.astro";
 ---
 
-<Layout notFound ogType="article" title="404 Not Fooooooo!!" description="ページが見つかりませんでした！！！">
+<Base notFound ogType="article" title="404 Not Fooooooo!!" description="ページが見つかりませんでした！！！">
 	<div id="contents">
 		<p>ページがみつかりませんでした！</p>
 	</div>
-</Layout>
+</Base>
 
 <style>
 	#contents {
