--- a/src/components/molecules/Post.astro
+++ b/src/components/molecules/Post.astro
@@ -3,6 +3,7 @@ import type { Blog } from "@/lib/microcms";
 import type { MicroCMSListContent } from "microcms-js-sdk";
 import { formatDate } from "@/lib/format-date";
 import { formatContents } from "@/lib/format-contents";
+import { css } from "@/styled-system/css";
 
 interface Props {
 	post: Blog & MicroCMSListContent;
@@ -14,14 +15,47 @@ const categoryContents = await formatContents(
 	post.category !== undefined && post.category.contents !== undefined ? post.category.contents : ""
 );
 const contents = categoryContents + (await formatContents(post.contents));
+
+const formattedPublishedAt = formatDate(post.publishedAt ?? post.createdAt);
 ---
 
-<div class="post-info">
-	<h2 class="post-title">{post.title}</h2>
+<div
+	class={css`
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 30px;
+		margin-bottom: 30px;
+	`}
+>
+	<h2
+		class={css`
+			font-size: 30px;
+			font-weight: bold;
+			text-align: center;
+			width: 100%;
+			max-width: 1000px;
+			padding: 50px 0;
+			word-wrap: break-word;
+			overflow-wrap: anywhere;
+			word-break: break-word;
+			word-break: auto-phrase;
+
+			@media (max-width: 800px) {
+				font-size: 25px;
+			}
+		`}
+	>
+		{post.title}
+	</h2>
 	{
 		post.thumbnail !== undefined && (
 			<img
-				class="post-thumbnail"
+				class={css`
+					width: 100%;
+					max-width: 800px;
+					height: auto;
+				`}
 				src={`${post.thumbnail.url}?fm=webp&w=880`}
 				srcset={`${post.thumbnail.url}?fm=webp&w=300px 300w,${post.thumbnail.url}?fm=webp&w=500px 500w,${post.thumbnail.url}?fm=webp&w=650px 650w,${post.thumbnail.url}?fm=webp&w=880px 880w`}
 				sizes="(max-width: 350px) 300px,(max-width: 550px) 500px,(max-width: 700px) 650px,875px"
@@ -34,103 +68,77 @@ const contents = categoryContents + (await formatContents(post.contents));
 	}
 </div>
 
-<div class="post-head">
+<div
+	class={css`
+		width: 100%;
+		max-width: 800px;
+		margin: 0 auto 60px auto;
+	`}
+>
 	{
 		post.tags.length !== 0 && (
-			<div class="post-tags">
+			<div
+				class={css`
+					display: flex;
+					gap: 10px;
+					flex-wrap: wrap;
+					align-items: center;
+					padding: 10px 0 30px;
+				`}
+			>
 				{post.tags.map((tag) => {
 					const size = 30;
 
 					return (
-						<div class="post-tag">
+						<div
+							class={css`
+								display: flex;
+								gap: 5px;
+								flex-wrap: wrap;
+								align-items: center;
+							`}
+						>
 							<img
-								class="post-tag-icon"
+								class={css`
+									border-radius: 9999px;
+									width: 20px;
+									height: auto;
+									background-color: #dfdfdf;
+								`}
 								src={tag.image !== undefined ? `${tag.image.url}?fm=webp&w=${size}` : ""}
 								width={size}
 								height={size}
 								alt={tag.name}
 							/>
-							<span class="post-tag-name">{tag.name}</span>
+							<span
+								class={css`
+									font-size: 13px;
+								`}
+							>
+								{tag.name}
+							</span>
 						</div>
 					);
 				})}
 			</div>
 		)
 	}
-	<time class="post-published-at" datetime={post.publishedAt ?? post.createdAt}>
-		{formatDate(post.publishedAt ?? post.createdAt)}
-	</time>
-</div>
-<article class="cms-contents">
-	<div class="rich-contents" set:html={contents} />
-</article>
-
-<style lang="scss">
-	.post-info {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 30px;
-		margin-bottom: 30px;
-
-		.post-title {
-			font-size: 30px;
-			font-weight: 500;
-			text-align: center;
-			width: 100%;
-			max-width: 1000px;
-			padding: 50px 0;
-			word-wrap: break-word;
-			overflow-wrap: anywhere;
-			word-break: break-word;
-			word-break: auto-phrase;
-		}
-
-		.post-thumbnail {
-			width: 100%;
-			max-width: 800px;
-			height: auto;
-		}
-	}
-
-	.post-head {
-		width: 100%;
-		max-width: 800px;
-		margin: 0 auto 60px auto;
-
-		.post-tags {
-			display: flex;
-			gap: 10px;
-			flex-wrap: wrap;
-			align-items: center;
-			padding: 10px 0 30px;
-
-			.post-tag {
-				display: flex;
-				gap: 5px;
-				flex-wrap: wrap;
-				align-items: center;
-
-				.post-tag-icon {
-					border-radius: 9999px;
-					width: 20px;
-					height: auto;
-					background-color: #dfdfdf;
-				}
-
-				.post-tag-name {
-					font-size: 13px;
-				}
-			}
-		}
-
-		.post-published-at {
+	<time
+		class={css`
 			font-size: 15px;
 			text-align: right;
 			display: block;
-		}
-	}
+		`}
+		datetime={post.publishedAt ?? post.createdAt}
+	>
+		{`${formattedPublishedAt.year}/${formattedPublishedAt.month}/${formattedPublishedAt.date}`}
+	</time>
+</div>
+<article class={"cms-contents"}>
+	<div class="rich-contents" set:html={contents} />
+</article>
 
+<style lang="scss" is:global>
 	.cms-contents {
 		width: 100%;
 		max-width: 800px;
@@ -141,7 +149,7 @@ const contents = categoryContents + (await formatContents(post.contents));
 			flex-direction: column;
 			gap: 30px;
 
-			& :global(a) {
+			a {
 				color: #07a715;
 				font-weight: bold;
 
@@ -166,17 +174,22 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(img) {
-				max-width: 100%;
+			img {
+				max-width: calc(100% - 100px);
 				height: auto;
 				margin: 0 auto;
 				display: block;
 				cursor: zoom-in;
+				user-select: none;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+				border-radius: 7px;
 
-				&:global(.zoom) {
+				&.zoom {
 					position: fixed;
 					top: 0;
 					left: 0;
+					border-radius: 0;
+					max-width: 100%;
 					width: 100%;
 					height: 100%;
 					background-color: rgba(0, 0, 0, 0.8);
@@ -186,7 +199,7 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(h5) {
+			h5 {
 				margin-top: 40px;
 				font-size: 17px;
 				font-weight: bold;
@@ -198,13 +211,13 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(h4) {
+			h4 {
 				margin-top: 40px;
 				font-size: 20px;
 				font-weight: bold;
 				line-height: 1.4;
 
-				& :global(+ h5) {
+				& + h5 {
 					margin-top: 0;
 				}
 
@@ -214,14 +227,14 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(h3) {
+			h3 {
 				margin-top: 40px;
 				font-size: 25px;
 				padding: 10px 0;
 				font-weight: bold;
 				line-height: 1.4;
 
-				& :global(+ h4) {
+				& + h4 {
 					margin-top: 0;
 				}
 
@@ -231,24 +244,24 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(pre > code),
-			& :global(pre > code *) {
+			pre > code,
+			pre > code * {
 				tab-size: 4;
 				-moz-tab-size: 4;
 				font-size: 13px;
 			}
 
-			& :global(pre:has(code)) {
+			pre:has(code) {
 				padding: 5px 10px 10px;
 				border-radius: 7px;
 				overflow-x: auto;
 			}
 
-			& :global(div[data-filename] > pre:has(code)) {
+			div[data-filename] > pre:has(code) {
 				border-top-left-radius: 0;
 			}
 
-			& :global(div[data-filename]) {
+			div[data-filename] {
 				position: relative;
 				padding-top: 22px;
 
@@ -276,11 +289,11 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& > :global(p) {
+			p {
 				line-height: 1.6;
 			}
 
-			& > :global(p > code) {
+			p > code {
 				background-color: #242424;
 				color: white;
 				padding: 2px 10px;
@@ -290,7 +303,7 @@ const contents = categoryContents + (await formatContents(post.contents));
 				vertical-align: middle;
 			}
 
-			& :global(.iframely-embed) {
+			.iframely-embed {
 				display: flex;
 				justify-content: center;
 
@@ -299,11 +312,11 @@ const contents = categoryContents + (await formatContents(post.contents));
 				}
 			}
 
-			& :global(.iframely-embed > div) {
+			.iframely-embed > div {
 				max-width: 500px;
 			}
 
-			& :global(.iframely-responsive) {
+			.iframely-responsive {
 				position: relative;
 				top: 0;
 				left: 0;
@@ -312,7 +325,7 @@ const contents = categoryContents + (await formatContents(post.contents));
 				padding-bottom: 56.25%;
 			}
 
-			& :global(.iframely-responsive > *) {
+			.iframely-responsive > * {
 				position: absolute;
 				top: 0;
 				left: 0;
@@ -321,13 +334,13 @@ const contents = categoryContents + (await formatContents(post.contents));
 				border: 0;
 			}
 
-			& :global(figure > figcaption) {
+			figure > figcaption {
 				text-align: center;
 				font-size: 15px;
 				margin-top: 10px;
 			}
 
-			& :global(.note) {
+			.note {
 				font-size: 12px;
 				font-weight: bold;
 				transform: translateY(-0.5em);
@@ -336,7 +349,7 @@ const contents = categoryContents + (await formatContents(post.contents));
 				cursor: pointer;
 			}
 
-			& :global(.note_address) {
+			.note_address {
 				font-size: 12px;
 				font-weight: bold;
 				transform: translateY(-0.5em);
